LP-2008-01-16-0: Bugfix:    PID file is not automatically removed

PJ-2008-01-16-0: Enhancem.: Change ClusterIndex to ClusterName, ready for unique
                            SGE_CLUSTER_NAME
                 Review:    JO

AP-2008-01-16-0: Bugfix:    o Wrong variable for calculating daily host values from 
                              hourly ones
                            o DBW derived rules and reporting queries that count 
                              jobs need to be updated - updating views view_accounting, 
                              view_job_times, view_jobs_completed
                            o Updating queries, fixing sql statements, adding 
                              descriptions
                 Bugster:   6457900, 6638354
                 Issue:     2463, 2440
                 Review:    JO

JO-2008-01-15-0: Enhancem.: Changed project.xml to use java 1.5

LP-2008-01-10-0: Enhancem.: Removed version string from SMF service name

AP-2008-01-09-0: Bugfix:    fix of PJ-2007-12-07-0 commit

JO-2008-01-09-0: Enhancem.:   o  Changed FileParser so it would parse the reporting
                                 file even if the 'acct' line does not contain ar_number
                              o  Added test for parsing line without ar_number
                              o  Updated arco run man page
                             
LP-2008-01-09-0: Enhancem.: dbwriter_template.xml is now in 
                            dbwriter/util/sgeSMF directory
                 Bugfix.:   Fixed db select in reporting installation
                 Review:    AP

LP-2008-01-08-0: Enhancem.: ReportingDBWriter reads in dbwriter.conf
                 Enhancem.: ARCo now must use Java 1.5+
                 Review:    JO

LP-2008-01-04-0: Enhancem.: Initial SMF support
                 Review:    JG

JO-2008-01-04-0: RFE:      dbwriter should write checkpoint to database
                 Bugster:  6644709
                 Issue:    2450
                 Review:   LP
